update something new

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -46,7 +46,8 @@
       "GetStarted": "Get started",
       "PressEnterToAdd": "Press Enter to add",
       "ChangePassword": "Change password",
-      "ViewProfile": "View profile"
+      "ViewProfile": "View profile",
+      "Reset": "Reset"
    },
    "Toast": {
       "CreateSuccessfully": "Create successfully",
