--- a/src/assets/i18n/vi-VN.json
+++ b/src/assets/i18n/vi-VN.json
@@ -45,7 +45,8 @@
       "GetStarted": "Get started",
       "PressEnterToAdd": "Press Enter to add",
       "ChangePassword": "Change password",
-      "ViewProfile": "View profile"
+      "ViewProfile": "View profile",
+      "Reset": "Reset"
    },
    "Toast": {
       "CreateSuccessfully": "Create successfully",
