--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -47,7 +47,8 @@
       "PressEnterToAdd": "Press Enter to add",
       "ChangePassword": "Change password",
       "ViewProfile": "View profile",
-      "Reset": "Reset"
+      "Reset": "Reset",
+      "ResetFilters": "Reset filters"
    },
    "Toast": {
       "CreateSuccessfully": "Create successfully",
