--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -48,7 +48,8 @@
       "ChangePassword": "Change password",
       "ViewProfile": "View profile",
       "Reset": "Reset",
-      "ResetFilters": "Reset filters"
+      "ResetFilters": "Reset filters",
+      "EditProfile": "Edit profile"
    },
    "Toast": {
       "CreateSuccessfully": "Create successfully",
@@ -106,14 +107,18 @@
       "Title": "Login",
       "Password": "Password",
       "ForgotPassword": "Forgot password",
-      "DontHaveAccount": "Don't have an account yet"
+      "DontHaveAccount": "Don't have an account yet",
+      "Or": "or",
+      "ContinueWithGoogle": "Continue with Google"
    },
    "Register": {
       "Title": "Register",
       "Password": "Password",
       "ConfirmPassword": "Confirm password",
       "Agreement": "By creating an account, you agree to the <a>Terms of Service</a> and <a>Privacy Policy</a>",
-      "AlreadyHaveAccount": "Already have an account"
+      "AlreadyHaveAccount": "Already have an account",
+      "Or": "or",
+      "ContinueWithGoogle": "Continue with Google"
    },
    "ForgotPassword": {
       "Title": "Forgot password",
@@ -205,7 +210,6 @@
       "VideoUrl": "Video URL",
       "LanguagesITeach": "Languages I teach",
       "LanguagesIKnow": "Languages I know"
-
    },
    "Home": {
       "Welcome": "Welcome, {{name}}!"
