update something new

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -54,7 +54,8 @@
    "Toast": {
       "CreateSuccessfully": "Create successfully",
       "UpdateSuccessfully": "Update successfully",
-      "DeleteSuccessfully": "Delete successfully"
+      "DeleteSuccessfully": "Delete successfully",
+      "RemoveSuccessfully": "Remove successfully"
    },
    "Confirmation": {
       "Title": "Confirmation",
