--- a/src/assets/i18n/vi-VN.json
+++ b/src/assets/i18n/vi-VN.json
@@ -55,7 +55,8 @@
    "Toast": {
       "CreateSuccessfully": "Create successfully",
       "UpdateSuccessfully": "Update successfully",
-      "DeleteSuccessfully": "Delete successfully"
+      "DeleteSuccessfully": "Delete successfully",
+      "RemoveSuccessfully": "Remove successfully"
    },
    "Confirmation": {
       "Title": "Confirmation",
