--- a/src/assets/i18n/vi-VN.json
+++ b/src/assets/i18n/vi-VN.json
@@ -50,13 +50,12 @@
       "Reset": "Reset",
       "ResetFilters": "Reset filters",
       "EditProfile": "Edit profile"
-
    },
    "Toast": {
-      "CreateSuccessfully": "Create successfully",
-      "UpdateSuccessfully": "Update successfully",
-      "DeleteSuccessfully": "Delete successfully",
-      "RemoveSuccessfully": "Remove successfully"
+      "CreatedSuccessfully": "Created successfully",
+      "UpdatedSuccessfully": "Updated successfully",
+      "DeletedSuccessfully": "Deleted successfully",
+      "RemovedSuccessfully": "Removed successfully"
    },
    "Confirmation": {
       "Title": "Confirmation",
