update something new

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -20,7 +20,8 @@
       "Active": "Active",
       "Inactive": "Inactive",
       "Pending": "Pending",
-      "Blocked": "Blocked"
+      "Blocked": "Blocked",
+      "Reviewing": "Reviewing"
    },
    "Action": {
       "Title": "Action",
