--- a/src/assets/i18n/vi-VN.json
+++ b/src/assets/i18n/vi-VN.json
@@ -1,249 +1,243 @@
 {
    "PageTitle": {
-      "Login": "Login",
-      "Register": "Register",
-      "ForgotPassword": "Forgot Password",
-      "PasswordReset": "Password Reset",
-      "Home": "Home",
-      "Account": "Account",
-      "Profile": "Profile",
-      "ChangePassword": "Change Password",
-      "AccountType": "Account Type",
-      "StudentProfile": "Student Profile",
-      "TutorProfile": "Tutor Profile",
-      "Welcome": "Welcome",
-      "UnderReview": "Under Review",
-      "Users": "Users"
+      "Login": "Đăng nhập",
+      "Register": "Đăng ký",
+      "ForgotPassword": "Quên mật khẩu",
+      "PasswordReset": "Đặt lại mật khẩu",
+      "Home": "Trang chủ",
+      "Account": "Tài khoản",
+      "Profile": "Hồ sơ",
+      "ChangePassword": "Thay đổi mật khẩu",
+      "AccountType": "Loại tài khoản",
+      "StudentProfile": "Hồ sơ học viên",
+      "TutorProfile": "Hồ sơ gia sư",
+      "Welcome": "Chào mừng",
+      "UnderReview": "Đang xem xét",
+      "Users": "Người dùng"
    },
    "Error": {
-      "Title": "Error",
-      "Required": "This field is required",
-      "Email": "Please enter a valid email",
-      "ExistingEmail": "Email already exists",
-      "NotFoundEmail": "Email not found",
-      "InvalidEmailOrPassword": "Invalid email or password",
-      "AccountBlocked": "Your account has been blocked",
-      "MustMatch": "{{control}} and {{matchingControl}} must match",
-      "MinLength": "{{control}} must be at least {{length}} characters",
-      "File": "Please upload a document",
-      "InvalidRequest": "Invalid request",
-      "InvalidYoutubeUrl": "Please enter a valid Youtube video URL"
+      "Title": "Lỗi",
+      "Required": "Đây là trường bắt buộc",
+      "Email": "Vui lòng nhập email hợp lệ",
+      "ExistingEmail": "Email đã tồn tại",
+      "NotFoundEmail": "Không tìm thấy email",
+      "InvalidEmailOrPassword": "Email hoặc mật khẩu không đúng",
+      "AccountBlocked": "Tài khoản của bạn đã bị khóa",
+      "MustMatch": "{{control}} và {{matchingControl}} không trùng nhau",
+      "MinLength": "{{control}} phải ít nhất {{length}} kí tự",
+      "File": "Vui lòng tải lên tài liệu",
+      "InvalidRequest": "Yêu cầu không hợp lệ",
+      "InvalidYoutubeUrl": "Vui lòng nhập địa chỉ Youtube URL hợp lệ"
    },
    "Hint": {
-      "Title": "Hint",
-      "CharactersRemaining": "{{remainingLength}} characters remaining"
+      "Title": "Gợi ý",
+      "CharactersRemaining": "{{remainingLength}} kí tự còn lại"
    },
    "Status": {
-      "Title": "Status",
-      "Active": "Active",
-      "Inactive": "Inactive",
-      "Pending": "Pending",
-      "Blocked": "Blocked",
-      "Reviewing": "Reviewing"
+      "Title": "Trạng thái",
+      "Active": "Đang hoạt động",
+      "Pending": "Đang chờ",
+      "Blocked": "Đang bị khóa",
+      "Reviewing": "Đang xem xét"
    },
    "Action": {
-      "Title": "Action",
-      "Select": "Select",
-      "Continue": "Continue",
-      "Back": "Back",
-      "Block": "Block",
-      "Unblock": "Unblock",
-      "Close": "Close",
-      "Login": "Login",
-      "Register": "Register",
-      "Logout": "Logout",
-      "Confirm": "Confirm",
-      "Cancel": "Cancel",
-      "Save": "Save",
-      "Change": "Change",
-      "Delete": "Delete",
-      "Edit": "Edit",
-      "Update": "Update",
-      "Remove": "Remove",
-      "Approve": "Approve",
-      "Reject": "Reject",
-      "Clear": "Clear",
-      "GetStarted": "Get started",
-      "PressEnterToAdd": "Press Enter to add",
-      "ChangePassword": "Change password",
-      "ViewProfile": "View profile",
-      "Reset": "Reset",
-      "ResetFilters": "Reset filters",
-      "EditProfile": "Edit profile",
-      "SendEmail": "Send email"
+      "Title": "Hành động",
+      "Select": "Chọn",
+      "Continue": "Tiếp tục",
+      "Back": "Quay lại",
+      "Block": "Khóa",
+      "Unblock": "Mở khóa",
+      "Close": "Đóng",
+      "Login": "Đăng nhập",
+      "Register": "Đăng ký",
+      "Logout": "Đăng xuất",
+      "Confirm": "Xác nhận",
+      "Cancel": "Hủy bỏ",
+      "Save": "Lưu",
+      "Change": "Thay đổi",
+      "Delete": "Xóa",
+      "Edit": "Sửa",
+      "Update": "Cập nhật",
+      "Remove": "Loại bỏ",
+      "Approve": "Chấp nhận",
+      "Reject": "Từ chối",
+      "Clear": "Xóa",
+      "GetStarted": "Bắt đầu",
+      "PressEnterToAdd": "Ấn enter để thêm",
+      "ChangePassword": "Thay đổi mật khẩu",
+      "ViewProfile": "Xem hồ sơ",
+      "Reset": "Đặt lại",
+      "ResetFilters": "Đặt lại bộ lọc",
+      "EditProfile": "Sửa hồ sơ",
+      "SendEmail": "Gửi email"
    },
    "Toast": {
-      "CreatedSuccessfully": "Created successfully",
-      "UpdatedSuccessfully": "Updated successfully",
-      "DeletedSuccessfully": "Deleted successfully",
-      "RemovedSuccessfully": "Removed successfully",
-      "BlockedSuccessfully": "Blocked successfully",
-      "ApprovedSuccessfully": "Approved successfully",
-      "RejectedSuccessfully": "Rejected successfully",
-      "UnblockedSuccessfully": "Unblocked successfully",
+      "CreatedSuccessfully": "Tạo mới thành công",
+      "UpdatedSuccessfully": "Cập nhật thành công",
+      "DeletedSuccessfully": "Xóa thành công",
+      "RemovedSuccessfully": "Loại bỏ thành công",
+      "BlockedSuccessfully": "Khóa thành công",
+      "ApprovedSuccessfully": "Chấp nhận thành công",
+      "RejectedSuccessfully": "Từ chối thành công",
+      "UnblockedSuccessfully": "Mở khóa thành công",
       "ChangedSuccessfully": "Changed successfully"
    },
    "Confirmation": {
-      "Title": "Confirmation",
-      "Message": "Are you sure you want to {{action}}?",
-      "Confirm": "Confirm",
-      "Cancel": "Cancel",
-      "UnsavedChanges": "You have unsaved changes that will be lost if you decide to continue. Are you sure want to leave?"
+      "Title": "Xác nhận",
+      "Message": "Bạn có chắc muốn {{action}}?",
+      "Confirm": "Xác nhận",
+      "Cancel": "Hủy bỏ",
+      "UnsavedChanges": "Bạn có những thay đổi và sẽ không được lưu lại nếu bạn rời đi. Bạn có chắc muốn rời đi?"
    },
    "FileUpload": {
-      "DragAndDropHere": "Drag and drop file(s) here",
-      "Or": "or",
-      "BrowseFiles": "Browse files",
-      "Change": "Change",
-      "AddAPhoto": "Add a photo",
-      "OnlyAllowedFileType": "You are allowed to only upload {{fileType}} file",
-      "FileTooLarge": "File is too large. Maximum upload size is {{maxUploadSize}}",
-      "OnlyAllowedFileQuantity": "You are allowed to only upload maximum {{quantity}} file(s)",
-      "OnlyFileTypeAndMaxSize": "only {{fileType}}, max size: {{maxSize}}",
-      "MaxSize": "max size: {{maxSize}}"
+      "DragAndDropHere": "Kéo và thả tập tin ở đây",
+      "Or": "hoặc",
+      "BrowseFiles": "Chọn tập tin",
+      "Change": "Thay đổi",
+      "AddAPhoto": "Thêm hình ảnh",
+      "OnlyAllowedFileType": "Bạn chỉ được phép tải lên tập tin {{fileType}}",
+      "FileTooLarge": "File quá lớn. Dung lượng tối đa là {{maxUploadSize}}",
+      "OnlyAllowedFileQuantity": "Bạn chỉ được phép tải lên nhiều nhất {{quantity}} tập tin",
+      "OnlyFileTypeAndMaxSize": "chỉ {{fileType}}, tối đa: {{maxSize}}",
+      "MaxSize": "tối đa: {{maxSize}}"
    },
    "ImageCropper": {
-      "Title": "Crop image"
+      "Title": "Cắt hình ảnh"
    },
    "Role": {
-      "Admin": "Admin",
-      "Tutor": "Tutor",
-      "Student": "Student"
+      "Admin": "Quản trị",
+      "Tutor": "Gia sư",
+      "Student": "Học viên"
    },
    "Table": {
-      "NoData": "No data",
-      "To": "to",
-      "Of": "of",
-      "Records": "records",
+      "NoData": "Không có dữ liệu",
+      "To": "đến",
+      "Of": "của",
+      "Records": "bản ghi",
       "No": "No",
-      "Photo": "Photo",
-      "Name": "Name",
-      "Type": "Type",
-      "Status": "Status",
-      "Action": "Action"
+      "Photo": "Hình ảnh",
+      "Name": "Tên",
+      "Type": "Loại",
+      "Status": "Trạng thái",
+      "Action": "Hành động"
    },
    "Welcome": {
-      "Title": "Welcome to Vietspeak",
-      "Description": "We are so happy you are here. In order to get started, you need to first choose the account type and complete the needed information."
+      "Title": "Chào mừng đến với Vietspeak",
+      "Description": "Chúng tôi rất vui mừng khi bạn ở đây. Để bắt đầu vui lòng chọn loại tài khoản và hoàn thành những thông tin cần thiết"
    },
    "UnderReview": {
-      "Title": "Your profile is under review",
-      "Description": "Your profile has been submitted and will be reviewed by our team. You will be notified by email if any extra information is needed."
+      "Title": "Hồ sơ của bạn đang được xem xét",
+      "Description": "Hồ sơ của bạn đã được nộp và đang được xem xét bởi chúng tôi. Chúng tôi sẽ liên hệ với bạn qua email những thông tin mới nhất"
    },
    "Login": {
-      "Title": "Login",
-      "Password": "Password",
-      "ForgotPassword": "Forgot password",
-      "DontHaveAccount": "Don't have an account yet",
-      "Or": "or",
-      "ContinueWithGoogle": "Continue with Google"
+      "Title": "Đăng nhập",
+      "Password": "Mật khẩu",
+      "ForgotPassword": "Quên mật khẩu",
+      "DontHaveAccount": "Chưa có tài khoản",
+      "Or": "hoặc",
+      "ContinueWithGoogle": "Tiếp tục với Google"
    },
    "Register": {
-      "Title": "Register",
-      "Password": "Password",
-      "ConfirmPassword": "Confirm password",
-      "Agreement": "By creating an account, you agree to the <a>Terms of Service</a> and <a>Privacy Policy</a>",
-      "AlreadyHaveAccount": "Already have an account",
-      "Or": "or",
-      "ContinueWithGoogle": "Continue with Google"
+      "Title": "Đăng ký",
+      "Password": "Mật khẩu",
+      "ConfirmPassword": "Xác nhận mật khẩu",
+      "Agreement": "Khi tạo tài khoản, bạn đã đồng ý với <a>Điều khoản dịch vụ</a> và <a>Chính sách bảo mật</a> của chúng tôi",
+      "AlreadyHaveAccount": "Đã có tài khoản",
+      "Or": "hoặc",
+      "ContinueWithGoogle": "Tiếp tục với Google"
    },
    "ForgotPassword": {
-      "Title": "Forgot password",
-      "SubTitle": "Enter your email address and we will send you instructions to reset your password",
-      "AlreadyHaveAccount": "Already have an account",
-      "SentEmailSuccess": "We've sent a link to your email with instructions to reset your password",
-      "BackTo": "Back to"
+      "Title": "Quên mật khẩu",
+      "SubTitle": "Vui lòng nhập email và chúng tôi sẽ gửi hướng dẫn đặt lại mật khẩu đến email của bạn",
+      "AlreadyHaveAccount": "Đã có tài khoản",
+      "SentEmailSuccess": "Chúng tôi đã gửi một email kèm đường link cùng hướng dẫn đặt lại mật khẩu đến email của bạn",
+      "BackTo": "Quay lại"
    },
    "PasswordReset": {
-      "Title": "Reset password",
-      "SubTitle": "Enter your new password for your account",
-      "Password": "Password",
-      "ConfirmPassword": "Confirm password",
-      "ChangedPasswordSuccessfully": "Changed your password successfully",
-      "GoLoginWithNewPassword": "You can now use your new password to login to your account"
+      "Title": "Đặt lại mật khẩu",
+      "SubTitle": "Nhập mật khẩu mới cho tài khoản của bạn",
+      "Password": "Mật khẩu",
+      "ConfirmPassword": "Xác nhận mật khẩu",
+      "ChangedPasswordSuccessfully": "Mật khẩu thay đổi thành công",
+      "GoLoginWithNewPassword": "Bây giờ bạn có thể dùng mật khẩu mới để đăng nhập vào tài khoản"
    },
    "OnBoarding": {
-      "Logout": "Logout",
-      "WhereHeardFrom": "Where did you hear about Vietspeak?",
-      "WebSearch": "Web search",
-      "SocialMedia": "Social media",
-      "FriendFamily": "Friend / Family",
-      "Other": "Other"
+      "Logout": "Đăng xuất",
+      "WhereHeardFrom": "Bạn biết đến Vietspeak từ đâu?",
+      "WebSearch": "Công cụ tìm kiếm",
+      "SocialMedia": "Mạng xã hội",
+      "FriendFamily": "Bạn bè / Gia đình",
+      "Other": "Khác"
    },
    "AccountType": {
-      "Title": "Choose account type",
-      "Student": "Student",
-      "Tutor": "Tutor"
+      "Title": "Chọn loại tài khoản",
+      "Student": "Học viên",
+      "Tutor": "Gia sư"
    },
    "StudentProfile": {
-      "Title": "Student profile",
-      "LanguageWantToLearn": "Which language do you want to learn?",
-      "FirstName": "First name",
-      "LastName": "Last name",
-      "Level": "Current level",
-      "Beginner": "Beginner",
-      "Intermediate": "Intermediate",
-      "Advanced": "Advanced",
-      "Basic": "Basic",
-      "BasicInfo": "Basic info",
-      "StudentProfile": "Student profile",
-      "Learning": "Learning",
-      "LearningLanguage": "Learning language",
-      "SupplementalInfo": "Supplemental info"
+      "Title": "Hồ sơ học viên",
+      "LanguageWantToLearn": "Bạn muốn học ngôn ngữ nào",
+      "FirstName": "Tên",
+      "LastName": "Họ",
+      "Level": "Trình độ hiện tại",
+      "Beginner": "Mới bắt đầu",
+      "Intermediate": "Trung cấp",
+      "Advanced": "Cao cấp",
+      "Basic": "Cơ bản",
+      "Learning": "Học tập",
+      "LearningLanguage": "Ngôn ngữ đang học",
+      "SupplementalInfo": "Thông tin thêm"
    },
    "TutorProfile": {
-      "Title": "Tutor profile",
-      "BasicInfo": "Basic info",
-      "PersonalInfo": "Personal info",
-      "TeachingAndExperience": "Teaching & Experience",
-      "Motivation": "Motivation",
-      "Experience": "Experience",
-      "SupplementalInfo": "Additional info",
-      "LanguageWantToTeach": "Which language do you want to teach?",
-      "ReasonHere": "Why do you want to tutor on Vietspeak?",
-      "FirstName": "First name",
-      "LastName": "Last name",
-      "DateOfBirth": "Date of birth",
-      "DateOfBirthNotDisplay": "Your date of birth will not be displayed to students",
-      "TeachingExperience": "Teaching experience",
-      "No": "No",
-      "Yes": "Yes",
-      "OneToSixMonths": "1 - 6 months",
-      "SevenToTwelveMonths": "7 - 12 months",
-      "OneToTwoYears": "1 - 2 years",
-      "MoreThanTwoYears": "More than 2 years",
-      "LanguagesYouSpeak": "Languages that you speak",
-      "Languages": "Languages",
-      "Language": "Language",
-      "Fluency": "Fluency",
-      "AddLanguage": "Add language",
-      "HaveExperienceTeachingOnline": "Do you have experience teaching online?",
-      "TeachingCertificates": "Teaching certificates",
-      "Certificates": "Certificates",
-      "ProfilePicture": "Profile picture",
-      "AboutMe": "About me",
-      "IntroductionDescription": "Say hello and introduce yourself to students! This will be the first thing students read about you when looking at their tutor profile",
-      "TutorProfile": "Tutor profile",
-      "Basic": "Basic",
-      "Additional": "Additional",
-      "Teaching": "Teaching",
-      "WhatYouTeach": "What you teach",
-      "WhatITeach": "What I teach",
-      "ITeach": "I teach",
-      "TeachingJobDescription": "E.g., Speaking, Writing...",
-      "Introduction": "Introduction",
-      "VideoIntroduction": "Video introduction",
-      "VideoIntroductionDescription": "An introduction video is the quickest way to help students get to know about you, so they can confidently decide to book lessons with you. Upload it on Youtube and paste the video URL here. You can do it later on your profile page.",
+      "Title": "Hồ sơ gia sư",
+      "BasicInfo": "Thông tin cơ bản",
+      "TeachingAndExperience": "Giảng dạy và kinh nghiệm",
+      "Motivation": "Động lực",
+      "Experience": "Kinh nghiệm",
+      "SupplementalInfo": "Thông tin thêm",
+      "LanguageWantToTeach": "Bạn muốn dạy ngôn ngữ nào?",
+      "ReasonHere": "Tại sao bạn muốn làm gia sư ở Vietspeak?",
+      "FirstName": "Tên",
+      "LastName": "Họ",
+      "DateOfBirth": "Ngày sinh",
+      "DateOfBirthNotDisplay": "Ngày sinh của bạn sẽ không hiển thị với học viên",
+      "TeachingExperience": "Kinh nghiệm giảng dạy",
+      "No": "Không",
+      "Yes": "Có",
+      "OneToSixMonths": "1 - 6 tháng",
+      "SevenToTwelveMonths": "7 - 12 tháng",
+      "OneToTwoYears": "1 - 2 năm",
+      "MoreThanTwoYears": "Hơn 2 năm",
+      "LanguagesYouSpeak": "Ngôn ngữ bạn biết",
+      "Languages": "Ngôn ngữ",
+      "Language": "Ngôn ngữ",
+      "Fluency": "Sự trôi chảy",
+      "AddLanguage": "Thêm ngôn ngữ",
+      "HaveExperienceTeachingOnline": "Bạn có kinh nghiệm giảng dạy trực tuyến?",
+      "TeachingCertificates": "Chứng chỉ giảng dạy",
+      "Certificates": "Chứng chỉ",
+      "ProfilePicture": "Ảnh hồ sơ",
+      "AboutMe": "Về bản thân",
+      "IntroductionDescription": "Hãy giới thiệu bản thân với học viên. Đây là điều đầu tiên học viên nhìn thấy khi xem hồ sơ của bạn",
+      "Basic": "Cơ bản",
+      "Teaching": "Giảng dạy",
+      "WhatYouTeach": "Bạn dạy",
+      "WhatITeach": "Tôi dạy",
+      "ITeach": "Tôi dạy",
+      "TeachingJobDescription": "Ví dụ: Speaking, Writing,...",
+      "Introduction": "Giới thiệu",
+      "VideoIntroduction": "Video giới thiệu",
+      "VideoIntroductionDescription": "Video giới thiệu bản thân là cách nhanh nhất để học viên biết thêm thông tin về bạn, sau đó học viên có thể tự tin đặt lịch học với bạn. Tải video của bạn lên Youtube và dán Youtube video URL tại đây. Bạn có thể cập nhật sau ở trang hồ sơ",
       "YoutubeVideoUrl": "Youtube video URL",
-      "LanguagesITeach": "Languages I teach",
-      "LanguagesIKnow": "Languages I know"
+      "LanguagesITeach": "Ngôn ngữ tôi dạy",
+      "LanguagesIKnow": "Ngôn ngữ tôi biết"
    },
    "Home": {
-      "Welcome": "Welcome, {{name}}!"
+      "Welcome": "Chào mừng, {{name}}!"
    },
    "AdminNavigations": {
-      "Home": "Home",
-      "Users": "Users"
+      "Home": "Trang chủ",
+      "Users": "Người dùng"
    },
    "Languages": {
       "English": "English",
@@ -253,39 +247,39 @@
       "Japanese": "Japanese",
       "Korean": "Korean",
       "Native": "Native",
-      "No": "No"
+      "No": "Không"
    },
    "Account": {
-      "Title": "Account",
-      "Profile": "Profile",
-      "Password": "Password",
-      "Settings": "Settings"
+      "Title": "Tài khoản",
+      "Profile": "Hồ sơ",
+      "Password": "Mật khẩu",
+      "Settings": "Thiết lập"
    },
    "User": {
-      "Title": "User",
-      "Titles": "Users",
-      "Profile": "Profile",
-      "UserProfile": "User profile",
-      "Password": "Password",
-      "SearchPlaceholder": "Find by name or email"
+      "Title": "Người dùng",
+      "Titles": "Người dùng",
+      "Profile": "Hồ sơ",
+      "UserProfile": "Hồ sơ người dùng",
+      "Password": "Mật khẩu",
+      "SearchPlaceholder": "Tìm kiếm bằng tên hoặc email"
    },
    "UserProfile": {
-      "Title": "Profile",
-      "FirstName": "First name",
-      "LastName": "Last name"
+      "Title": "Hồ sơ",
+      "FirstName": "Tên",
+      "LastName": "Họ"
    },
    "ChangePassword": {
-      "Title": "Change password",
-      "CurrentPassword": "Current password",
-      "NewPassword": "New password",
-      "ConfirmNewPassword": "Confirm new password"
+      "Title": "Thay đổi mật khẩu",
+      "CurrentPassword": "Mật khẩu hiện tại",
+      "NewPassword": "Mật khẩu mới",
+      "ConfirmNewPassword": "Xác nhận mật khẩu mới"
    },
    "Tutor": {
-      "Title": "Tutor",
-      "Titles": "Tutors"
+      "Title": "Gia sư",
+      "Titles": "Gia sư"
    },
    "Student": {
-      "Title": "Student",
-      "Titles": "Students"
+      "Title": "Học viên",
+      "Titles": "Học viên"
    }
 }
